# api/routes/seance.go
@@ -8,6 +8,8 @@ import (
 func RegisterSeanceRoutes(r *gin.Engine) {
 
 	r.GET("/seances", controllers.GetAllSeances)
+	r.GET("/seances/today", controllers.GetSeancesToday)
+	r.GET("/seances/by-date", controllers.GetSeancesByDate)
 	r.GET("/seances/:id", controllers.GetSeanceById)
 	r.POST("/seances", controllers.CreateSeance)
 	r.PUT("/seances/:id", controllers.UpdateSeance)
